@@ -1,74 +1,74 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>hps-integration-tests</artifactId>
-    <name>integration-tests</name>
-    <description>integration test suite</description>
-    <parent>
-        <groupId>org.hps</groupId>
-        <artifactId>hps-parent</artifactId>
-        <relativePath>../parent/pom.xml</relativePath>
-        <version>3.11-SNAPSHOT</version>
-    </parent>
-    <dependencies>
-        <dependency>
-            <groupId>org.hps</groupId>
-            <artifactId>hps-distribution</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hps</groupId>
-            <artifactId>hps-test-data</artifactId>
-            <version>1.0</version>
-            <scope>test</scope>
-            <classifier>archive</classifier>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.hps</groupId>
-            <artifactId>hps-test-data</artifactId>
-            <version>1.0</version>
-            <scope>test</scope>
-            <type>jar</type>
-        </dependency>
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>                                 
-                <configuration>
-                    <skipTests>true</skipTests>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                    <argLine>-server -Xmx2g -XX:MaxPermSize=512m</argLine>
-                    <forkCount>1</forkCount>
-                    <reuseForks>false</reuseForks>
-                    <includes>
-                        <include>org/hps/test/it/*Test.java</include>
-                    </includes>
-                    <excludes>
-                        <exclude>**/EcalSimReconTest.java</exclude>
-                        <exclude>**/DataQualityMonitorTest.java</exclude>
-                    </excludes>
-                    <systemPropertyVariables>
-                        <org.lcsim.cacheDir>${org.lcsim.cacheDir}</org.lcsim.cacheDir>
-                        <java.util.logging.config.class>org.hps.logging.config.TestLoggingConfig</java.util.logging.config.class>
-                    </systemPropertyVariables>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+  <modelVersion>4.0.0</modelVersion>
+  <artifactId>hps-integration-tests</artifactId>
+  <name>integration-tests</name>
+  <description>integration test suite</description>
+  <parent>
+    <groupId>org.hps</groupId>
+    <artifactId>hps-java</artifactId>
+    <relativePath>../pom.xml</relativePath>
+    <version>3.11-SNAPSHOT</version>
+  </parent>
+  <dependencies>
+    <dependency>
+      <groupId>org.hps</groupId>
+      <artifactId>hps-distribution</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hps</groupId>
+      <artifactId>hps-test-data</artifactId>
+      <version>1.0</version>
+      <scope>test</scope>
+      <classifier>archive</classifier>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.hps</groupId>
+      <artifactId>hps-test-data</artifactId>
+      <version>1.0</version>
+      <scope>test</scope>
+      <type>jar</type>
+    </dependency>
+  </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <argLine>-server -Xmx2g</argLine>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
+          <includes>
+            <include>org/hps/test/it/*Test.java</include>
+          </includes>
+          <excludes>
+            <exclude>**/EcalSimReconTest.java</exclude>
+            <exclude>**/DataQualityMonitorTest.java</exclude>
+          </excludes>
+          <systemPropertyVariables>
+            <org.lcsim.cacheDir>${org.lcsim.cacheDir}</org.lcsim.cacheDir>
+            <java.util.logging.config.class>org.hps.logging.config.TestLoggingConfig</java.util.logging.config.class>
+          </systemPropertyVariables>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
